@@ -8,6 +8,7 @@ Runtime requirements:
   autoconf
   automake
   bash
+  binutils
   bzip2
   coreutils
   diffstat
