@@ -1,5 +1,5 @@
 category: Devel
-requires: autoconf automake bash bzip2 coreutils cygwin diffutils file grep gzip libtool1.5 make patch sed tar unzip wget
+requires: autoconf automake bash binutils bzip2 coreutils cygwin diffutils file grep gzip libtool1.5 make patch sed tar unzip wget
 sdesc: "Cygwin source packaging tool"
 ldesc: "This is cygport, a revolutionary new method for building and
 maintaining packages for the Cygwin distribution"
